updating our details

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
       <h1>Introduction</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Atlanta, 
+        GA
+      </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Basketball</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning my own sports platform</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Midtown Atlanta</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Learning how tech and the web keep our world connected is extremely important to me and my career moving forward</p>
     </section>
 
     <footer id="footer">
