--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Jazz Felton and I'm extremely excited to begin learning this new skill, that is coding.</p>
       <h1>Where I'm From</h1>
       <p>Atlanta, 
         GA
